<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_index_header"
            style="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/index"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_content_header"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_index_value"
            style="?attr/textAppearanceBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="@+id/tv_index_header"
            app:layout_constraintStart_toStartOf="@+id/tv_index_header"
            app:layout_constraintTop_toBottomOf="@+id/tv_index_header"
            tools:text="1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_content_header"
            style="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_index_header"
            app:layout_constraintEnd_toStartOf="@+id/tv_prediction_label_header"
            app:layout_constraintStart_toEndOf="@+id/tv_index_header"
            app:layout_constraintTop_toTopOf="@+id/tv_index_header" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_content_value"
            style="?attr/textAppearanceBody2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            tools:text="terimakasih banyak drivernya ramah dan baik"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_content_header"
            app:layout_constraintStart_toStartOf="@+id/tv_content_header"
            app:layout_constraintTop_toTopOf="@+id/tv_index_value" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_prediction_label_header"
            style="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prediction"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_header"
            app:layout_constraintEnd_toStartOf="@+id/tv_actual_label_header"
            app:layout_constraintStart_toEndOf="@+id/tv_content_header"
            app:layout_constraintTop_toTopOf="@+id/tv_content_header" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_prediction_label_value"
            style="?attr/textAppearanceBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_value"
            app:layout_constraintEnd_toEndOf="@+id/tv_prediction_label_header"
            app:layout_constraintStart_toStartOf="@+id/tv_prediction_label_header"
            app:layout_constraintTop_toTopOf="@+id/tv_content_value"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Positif" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_actual_label_header"
            style="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/actual"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_prediction_label_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_prediction_label_header"
            app:layout_constraintTop_toTopOf="@+id/tv_prediction_label_header" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_actual_label_value"
            style="?attr/textAppearanceBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/tv_prediction_label_value"
            app:layout_constraintEnd_toEndOf="@+id/tv_actual_label_header"
            app:layout_constraintStart_toStartOf="@+id/tv_actual_label_header"
            app:layout_constraintTop_toTopOf="@+id/tv_prediction_label_value"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Positif" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>